ex1/main/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dwk-main-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dwk-main
  template:
    metadata:
      labels:
        app: dwk-main
    spec:
      containers:
        - name: dwk-main
          image: janzu/dwk-main:latest
