ex1/main/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dwk-main-svc
spec:
  type: ClusterIP
  selector:
    app: dwk-main
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
