ex1/main/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dwk-main-ingress
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: dwk-main-svc
              servicePort: 2345
#          - path: /pingpong
#            backend:
#              serviceName: dwk-pingpong-svc
#              servicePort: 2346
